--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,10 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
         <a href="{{ site.baseurl }}">
-          {{ site.title }}
+          <h1>{{ site.title }}</h1>
+          <h2>{{ site.subtitle }}</h2>
         </a>
-      </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
 
