--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Arapey", serif;
 }
 @media (min-width: 48em) {
   html {
@@ -79,8 +79,18 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 2.4em;
+  text-align: center;
+}
+.sidebar-about h2 {
+  color: #fff;
+  margin-top: 0;
+  font-family: "Lato";
+  font-weight: 700;
+  font-size: 2.9em;
+  text-align: center;
 }
 
 /* Sidebar nav */
