Add deployment settings
Build & deploy with TravisCI. Removed placeholder Poole / Hyde blog
content.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -87,6 +87,6 @@ $('#subscribe-form').submit(function(e){
 
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>&copy; {{ site.time | date: '%Y' }}</p>
   </div>
 </div>
