--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,7 +57,10 @@
                   text-align: center;
                   background: #7f8c8d;
                   border: 0;
-                  cursor: pointer;"/>
+                  cursor: pointer;
+                  -webkit-appearance:none;
+                  -webkit-border-radius:0;
+                  "/>
             </form>
           </div>
           <div id="form-sub-container-2" style="display:none;">
